# ICE

./: .gitignore  .qoddi.yaml  Cargo.toml  Dockerfile  Makefile  README.md  TESTING.md  build.zig  config.toml  deny.toml  docker-compose.yml  go.mod  go.sum  mutants.toml
.github/workflows/: mutation-testing.yml  security-scanning.yml
.qoder/quests/: hyper-efficient-ai-model.md
.qoder/rules/: rules.md
__fixtures__/mcp/2025-01-15/: api_error_04jkl012mno345ef.json  api_health_01abc23def456789.json  data_humaneval_03ghi789jkl012cd.json  tool_compiler_02def456ghi789ab.json
benches/: energy_benchmarks.rs  inference_benchmarks.rs
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  MUTATION_TESTING.md  SECURITY_SCANNING.md
metrics/: performance.json
scripts/: analyze_mutations.py  download_datasets.py  manage_mcp_cache.ps1  run_benchmark_tests.ps1  run_dataset_download.bat  run_mutation_tests.ps1  run_mutation_tests.sh  run_security_scan.ps1  run_training_validation.ps1  setup_and_run_dataset_download.bat
security/: security-scan.toml
src/: lib.rs  main.rs
src/kernels/: bench.zig  build.zig  kernel_tests.zig  lib.zig  matrix.zig  quantize.zig  snn.zig  sparse.zig  test.zig  test_runner.zig
src/mcp/: api.go  api_test.go  data.go  data_test.go  feedback.go  feedback_test.go  mcp_test.go  tools.go  tools_test.go
src/model/: agentic.rs  core.rs  fusion.rs  mcp.rs  mcp_cache_manager.rs  mod.rs  validation.rs
src/tests/: comprehensive_tests.rs  integration_tests.rs  mod.rs  model_tests.rs  performance_tests.rs  security_tests.rs  training_tests.rs  training_tests_comprehensive.rs  utils_tests.rs
src/training/: datasets.rs  genetic.rs  main.rs  metrics.rs  mod.rs  trainer.rs
src/utils/: config.rs  energy.rs  mcp_cache.rs  mcp_fixtures.rs  mod.rs  perf.rs  schemas.rs
tests/benchmarks/: gsm8k_benchmark.rs  humaneval_benchmark.rs  mod.rs
tests/integration/: agentic_integration_tests.rs  mod.rs  training_time_validation.rs  training_time_validation_tests.rs
tests/unit/: mcp_cache_tests.rs
