[package]
name = "ultra-fast-ai"
version = "0.1.0"
edition = "2021"
authors = ["AI Model Team"]
description = "Hyper-efficient AI model with SNN-SSM-Liquid NN hybrid architecture"
license = "MIT"
repository = "https://github.com/user/ultra-fast-ai"
keywords = ["ai", "neural-networks", "snn", "ssm", "liquid-nn"]
categories = ["science", "algorithms"]
readme = "README.md"

# Optimization for CPU inference performance
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Development profile with debug info
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[dependencies]
# Core tensor operations and neural network framework
# burn = { version = "0.13", features = ["ndarray", "train", "std"] }
# candle-core = { version = "0.4" }
# candle-nn = { version = "0.4" }
# neuroflow = "0.2"
ndarray = { version = "0.15", features = ["rayon", "serde"] }

# Async runtime and parallelism
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# parquet = "50.0"
# arrow = "50.0"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Regex for text processing
regex = "1.10"

# Mathematical operations
num-traits = "0.2"
num-complex = "0.4"

# Cryptographic hashing and time handling
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for MCP
reqwest = { version = "0.11", features = ["json", "rustls-tls"], optional = true }
rustls = { version = "0.22", optional = true }

# Schema validation
schemars = { version = "0.8", features = ["derive"] }
jsonschema = "0.17"

# CLI interface
clap = { version = "4.4", features = ["derive"] }

# Configuration management
config = "0.14"
toml = "0.8"

# Memory management and system monitoring
sysinfo = "0.30"

[dev-dependencies]
# Testing framework
rstest = "0.18"          # Fixture-based testing
proptest = "1.4"          # Property-based testing
quickcheck = "1.0"        # Another property-based testing framework
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1.34"             # Snapshot testing
tokio-test = "0.4"        # Async testing utilities
tempfile = "3.8"          # Temporary file management
mockall = "0.12"          # Mocking framework
test-case = "3.3"         # Parameterized testing
serial_test = "3.0"       # Sequential test execution

# Coverage testing
cargo-tarpaulin = "0.27"

# Fuzzing
cargo-fuzz = "0.11"

[build-dependencies]
# FFI bindings for Zig kernels
bindgen = "0.69"
cc = "1.0"

[[bin]]
name = "ultra-fast-ai"
path = "src/main.rs"

[[bin]]
name = "train"
path = "src/training/main.rs"

[lib]
name = "ultra_fast_ai"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# Benchmark configuration
[[bench]]
name = "inference_benchmarks"
harness = false
path = "benches/inference_benchmarks.rs"

[[bench]]
name = "energy_benchmarks"
harness = false
path = "benches/energy_benchmarks.rs"

# Feature flags
[features]
default = ["cpu-optimized"]
cpu-optimized = ["ndarray/rayon"]
# gpu-training = ["burn/candle-cuda"]
zig-kernels = []
mcp-integration = ["reqwest", "rustls"]

[workspace]
members = [
    ".",
]
